# friday-ai

./: .env.example  Dockerfile  agent_friday.py  deploy.sh  pyproject.toml  railway.json  render.yaml  requirements.txt  server.py  worker.mcp.js  wrangler.toml
friday/: config.py
friday/prompts/: templates.py
friday/resources/: data.py
friday/tools/: __init__.py  execution.py  sarcasm.py  tickets.py  web.py
mac_agent/: boot_sequence.py  setup_startup.sh
mac_app/: friday_app.py  friday_pro.py  friday_ultra.py  install.sh  requirements.txt  uninstall.sh  voice_helper.swift
web_demo/: index.html
